# ghostquant-crypto

./: .dockerignore  .env.example  .gitignore  BACKUP_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  PRIORITY_5_VERIFICATION.md  README.md  docker-compose.yml
alerts/: Dockerfile  pyproject.toml
alerts/src/alerts/: engine.py
alerts/src/alerts/channels/: email_smtp.py  telegram.py
alphabrain/: Dockerfile  pyproject.toml
alphabrain/src/alphabrain/: __init__.py  api.py  config.py  service.py
alphabrain/src/alphabrain/analytics/: harvard_analytics.py  narrative.py
alphabrain/src/alphabrain/fusion/: alpha_fusion.py
alphabrain/src/alphabrain/models/: factor_model.py  macro_regime.py  risk_allocator.py
alphabrain/src/alphabrain/playbooks/: institutional.py
alphabrain/src/alphabrain/reports/: pdf_generator.py
api/: Dockerfile  pyproject.toml  requirements.txt  requirements_railway.txt  run_intel_worker.py
api/app/: cache.py  db.py  deps.py  main.py
api/app/demo_engine/: __init__.py  demo_analytics.py  demo_copilot.py  demo_entity_scan.py  demo_prediction.py  demo_risk_map.py  demo_router.py
api/app/gde/api/: __init__.py  api_correlation.py  api_fusion.py  api_radar.py  api_ultrafusion.py  predict_api.py  ultrafusion_engine.py  ultrafusion_schema.py
api/app/gde/apidocs/: __init__.py  api_apidocs.py  apidocs_engine.py  apidocs_examples.py  apidocs_health.py  apidocs_registry.py  apidocs_schema.py  apidocs_tester.py
api/app/gde/behavior/: __init__.py
api/app/gde/billing/: __init__.py  api_billing.py  billing_engine.py  billing_plans.py  billing_reporter.py  billing_schema.py  stripe_gateway.py
api/app/gde/compliance/: __init__.py  api_executive_report.py  executive_report_engine.py
api/app/gde/constellation_ai/: __init__.py  cluster_labeler.py
api/app/gde/constellation_fusion/: __init__.py  demo_fusion_events.py  fusion_models.py  fusion_registry.py  fusion_router.py  fusion_service.py
api/app/gde/constellation_fusion_stream/: __init__.py  stream_server.py  test_phase10.py
api/app/gde/constellation_hydra/: __init__.py  hydra_input_adapter.py
api/app/gde/constellation_risk/: __init__.py  risk_model_engine.py
api/app/gde/constellation_timeline/: __init__.py  timeline_engine.py
api/app/gde/contracts/: __init__.py  api_contracts.py  contract_compliance.py  contract_engine.py  contract_negotiation.py  contract_pricing.py  contract_renewal.py  contract_schema.py  contract_storage.py  contract_templates.py  contract_territory.py  contract_validator.py
api/app/gde/cortex/: __init__.py  api_cortex.py  cortex_memory_engine.py  cortex_schema.py
api/app/gde/dataroom/: __init__.py  api_dataroom.py  dataroom_access_control.py  dataroom_engine.py  dataroom_exporter.py  dataroom_schema.py  dataroom_templates.py
api/app/gde/demo/: README.md  __init__.py  demo_engine.py  demo_routes.py  demo_schema.py  demo_synthetic_generator.py
api/app/gde/entities/: base_entity.py
api/app/gde/events/: base_event.py
api/app/gde/fabric/: ai_signal_generator.py  background_worker.py  intelligence_api.py  intelligence_fabric.py  intelligence_feed_simulator.py  intelligence_queue_worker.py  intelligence_schema.py  redis_bus.py  socketio_gateway.py  websocket_alert_engine.py
api/app/gde/genesis/: __init__.py  api_genesis.py  genesis_archive_engine.py  genesis_schema.py
api/app/gde/gq_core/: __init__.py  ecosystems.py  ecosystems_service.py  schemas.py  service.py  synthetic.py
api/app/gde/ingestion/: base_engine.py  behavioral_timeline.py  (+4 more)
api/app/models/: __init__.py
api/app/routers/: alerts.py  assets.py  backtests.py  darkpool.py  dashboard.py  derivatives.py  gq_core.py  health.py  heatmap.py  insights.py  liquidity.py  manipulation.py  market.py  metrics.py  notes.py  patterns.py  screener.py  screener_cached.py  signals.py  stablecoin.py  stt_proxy.py  system.py  unified_risk.py  whales.py
api/app/services/: __init__.py  alert_manager.py  backtest_engine.py  clustering_engine.py  coingecko_client.py  composite_scorer.py  liquidity_engine.py  momentum_scorer.py  momentum_worker.py  pattern_detector.py  pretrend_fusion.py  rank_tracker.py  redis_cache.py  screener_worker.py  sector_mapper.py  slippage_estimator.py  upstash_cache.py  websocket_server.py  whale_fusion.py  whale_provider.py  whale_scoring.py
api/app/utils/: cache_helper.py  feature_flags.py  scoring_utils.py
api/app/widb/: __init__.py  intel_ingest.py  widb_events.py  widb_models.py  widb_repository.py  widb_router.py  widb_service.py
api/tests/: test_backtests_api.py  test_composite_scorer.py  test_threat_map.py
api/tools/: check_endpoints.py  verify_deploy.py
backtest/: pyproject.toml
backtest-worker/: Dockerfile  pyproject.toml
backtest-worker/src/worker/: __init__.py  __main__.py  backtest_runner.py  config.py  database.py  tasks.py
backtest-worker/tests/: __init__.py  test_backtest_runner.py
backtest/src/backtest/: bars.py  engine.py  run.py  slippage.py
ecoscan/: Dockerfile  pyproject.toml
ecoscan/src/ecoscan/: __init__.py  api.py  config.py  service.py
ingest/: Dockerfile  pyproject.toml
ingest/src/ingest/: run.py
ingester/: Dockerfile  pyproject.toml
ingester/src/ingester/: __init__.py  __main__.py  coingecko_client.py  config.py  database.py  fetcher.py  rate_limiter.py
ingester/tests/: __init__.py  test_rate_limiter.py
signals/: Dockerfile  pyproject.toml
signals/src/signals/: config.py  factors.py  scheduler.py  trendscore.py
(+939 files in other folders)
