[tool.poetry]
name = "ghostquant-alerts"
version = "0.1.0"
description = "GhostQuant Alerts Service"
authors = ["GhostQuant Team"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {extras = ["binary", "pool"], version = "^3.1.0"}
redis = "^5.0.0"
aiohttp = "^3.9.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
