[tool.poetry]
name = "ghostquant-api"
version = "0.1.0"
description = "GhostQuant API Service"
authors = ["GhostQuant Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.0"}
asyncpg = "^0.29.0"
redis = "^5.0.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
aiohttp = "^3.9.0"
apscheduler = "^3.10.0"
websockets = "^12.0"
rq = "^1.15.1"
python-socketio = "^5.10.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
