[tool.poetry]
name = "ghostquant-backtest-worker"
version = "1.0.0"
description = "GhostQuant backtest worker service"
authors = ["GhostQuant Team"]

[tool.poetry.dependencies]
python = "^3.11"
rq = "^1.15.0"
redis = "^5.0.0"
asyncpg = "^0.29.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
