[tool.poetry]
name = "ghostquant-signals"
version = "0.1.0"
description = "GhostQuant Signals Service"
authors = ["GhostQuant Team"]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {extras = ["binary", "pool"], version = "^3.1.0"}
redis = "^5.0.0"
numpy = "^1.26.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
